--- a/productlist.html
+++ b/productlist.html
@@ -24,7 +24,7 @@
   </header>
   <main>
     <h1></h1>
-    <div class="checkbox-box">
+    <!-- <div class="checkbox-box">
       <form action="/action_page.php">
           <input type="checkbox" id="affair" name="sub-category" value="affair">
           <label for="affair">Affair</label>
@@ -51,7 +51,7 @@
           <label for="polyamours">Polyamours</label>
           <input type="checkbox" id="sugardating" name="sub-category" value="sugardating">
           <label for="sugardating">Sugardating</label>
-    </div>
+    </div> -->
 
     <template>
       <section class="box">
