--- a/categories.html
+++ b/categories.html
@@ -8,7 +8,7 @@
     <title>Categories</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="categories.css">
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="img/favicon-data-bae.svg" />
 </head>
 
 <body>
