--- a/form.html
+++ b/form.html
@@ -9,18 +9,18 @@
   <title>Add a site</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="form.css" />
-  <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+  <link rel="icon" type="image/svg+xml" href="img/favicon-data-bae.svg
 </head>
 
 <body>
   <header>
-    <div class="logo">
-      <a href="index.html">DatA-bae</a>
-    </div>
-    <div class="nav_button">
-      <a href="categories.html">Categories</a>
-      <a href="form.html">Add a site</a>
-    </div>
+    <div class=" logo">
+  <a href="index.html">DatA-bae</a>
+  </div>
+  <div class="nav_button">
+    <a href="categories.html">Categories</a>
+    <a href="form.html">Add a site</a>
+  </div>
   </header>
   <main>
     <h1>Add Dating Site</h1>
@@ -48,6 +48,6 @@
       </form>
     </div>
   </main>
-</body>
+  </body>
 
 </html>
