--- a/product.html
+++ b/product.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="robots" content="noindex, nofollow">
   <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="product.css" />
@@ -28,7 +29,7 @@
       <div class="box">
         <p class="celebritiesOnSite"></p>
         <div class="right">
-          <img class="image" src="" alt="" />
+          <img class="image" src="image" alt="" />
           <p class="secondary"><span class="primary users"></span> USERS</p>
           <p class="secondary">FOUNDED <span class="primary founded"></span></p>
           <p class="secondary paymentreq">Free</p>
