--- a/categories.html
+++ b/categories.html
@@ -28,7 +28,7 @@
             <a class="category_box" href="productlist.html?category=LGBT">Lgbt+</a>
             <a class="category_box" href="productlist.html?category=Niche">Niche</a>
             <a class="category_box" href="productlist.html?category=Fetish">Fetish</a>
-            <a class="category_box" href="productlist.html?category=Standard">Conform</a>
+            <a class="category_box" href="productlist.html?category=Standard">Conventional</a>
         </div>
     </main>
 </body>
